# oscar-routing

./: .gitignore  CMakeLists.txt  Readme.md
apps/: main.cpp
include/liboscar/routing/support/: Edge2CellIds.h
src/: Edge2CellIds.cpp
